# Pdf2OCR

./: .gitignore  README.md  pyproject.toml  run_full_pipeline.py
pdf2ocr/: __init__.py  api.py  cli.py
pdf2ocr/exporters/: __init__.py  pdf_exporter.py  word_exporter.py
pdf2ocr/extractors/: __init__.py  document_structurer.py  information_extractor.py  table_extractor.py  table_to_svg.py
pdf2ocr/processors/: __init__.py  chart_regenerator.py  image_enhancer.py  image_regenerator.py  llm_enhancer.py  ocr_processor.py  pdf_splitter.py  pdf_toolkit.py
pdf2ocr/providers/: __init__.py  anthropic_provider.py  base.py  llm_adapter.py  mistral_provider.py  multi_engine_adapter.py  openai_ocr_provider.py  openai_provider.py  tesseract_provider.py
pdf2ocr/utils/: __init__.py  svg_validator.py
pdf2ocr/workflows/: __init__.py  builder.py  presets.py  runner.py  steps.py
